# LangCheck

./: .gitignore  .luacheckrc  CONTRIBUTING.md  Justfile  README.md  THIRD_PARTY_NOTICES.md  crowdin.yml  docker-compose.yml  lefthook.yml  spellcheck_wordlists.json  test.md
.github/: dependabot.yml  homebrew-formula.rb  nvim-lsp-smoke-test.sh  nvim-lsp-test.lua  smoke-test.sh
.github/fixtures/: clean.md  errors.html  errors.md  errors.tex  prose-style.md  wordy.md
.github/workflows/: bench.yml  crowdin.yml  lint-lua.yml  lint-rust.yml  lint-ts.yml  lint.yml  pages.yml  release.yml  sync-nvim-plugin.yml  sync-tree-sitter-forester.yml  test-rust.yml  test-ts.yml  test.yml  wasm-plugin.yml
docs/: Makefile  README.md  conf.py  guide-config-language.md  guide-plugin-language.md  guide-wasm-plugin.md  index.md  requirements.txt  tinylang-spec.md
docs/_static/: custom.css
docs/_templates/: layout.html  selectlang.html
docs/advanced/: api.md  plugins.md  providers.md
docs/guide/: configuration.md  installation.md  languages.md  languagetool-setup.md  localization.md  motivation.md  neovim-setup.md  proselint-setup.md  vale-setup.md
docs/reference/: cli.md  config-schema.md  directives.md  publishing.md  troubleshooting.md
editors/mason/: language-check-server.yaml
extension/: .vscodeignore  LICENSE  README.md  eslint.config.mjs  package.json  package.nls.de.json  package.nls.es.json  package.nls.fr.json  package.nls.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
extension/l10n/: bundle.l10n.de.json  bundle.l10n.es.json  bundle.l10n.fr.json  bundle.l10n.json  bundle.l10n.ru.json
extension/media/: walkthrough-check.md  walkthrough-configure.md  walkthrough-language.md  walkthrough-speedfix.md
extension/src/: api.ts  client.ts  downloader.ts  events.ts  extension.ts  logger.ts  trace.ts
extension/src/proto/: checker.d.ts  checker.js
extension/src/test/: client.test.ts  (+1 more)
extension/webview/: inspector.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
plans/: architecture_research.md
plugins/wordiness-check/: Makefile  README.md  detect.go  detect_test.go  go.mod  main.go  wordiness-check.wasm
proto/: checker.proto
rust-core/: Cargo.toml  Cross.toml  build.rs  clippy.toml  deny.toml
rust-core/benches/: benchmarks.rs
rust-core/data/: harper_mapping.yaml  languagetool_mapping.yaml
rust-core/dictionaries/: THIRD_PARTY_NOTICES.md
rust-core/dictionaries/bundled/: companies.txt  jargon.txt  software-terms.txt  typescript.txt
rust-core/src/: bibtex_ts.rs  cache.rs  config.rs  detection.rs  dictionary.rs  document.rs  engines.rs  feedback.rs  forester_ts.rs  hashing.rs  ignore_rules.rs  insights.rs  languages.rs  lib.rs  lsp.rs  main.rs  orchestrator.rs  org_ts.rs  prose.rs  rules.rs  scoping.rs  sls.rs  style_rules.rs  tinylang_ts.rs  typst_ts.rs  workspace.rs
rust-core/src/engines/: mod.rs  proselint.rs  vale.rs
rust-core/src/prose/: bibtex.rs  forester.rs  latex.rs  mod.rs  org.rs  query.rs  rst.rs  shared.rs  sweave.rs  tinylang.rs  typst.rs
rust-core/tests/: prose_extraction_edge_cases.rs  sls_integration.rs  snapshot_diagnostics.rs  wasm_plugin.rs
rust-core/tests/snapshots/: snapshot_diagnostics__harper_an_vs_a.snap  snapshot_diagnostics__harper_clean_text.snap  snapshot_diagnostics__harper_multiple_issues.snap  snapshot_diagnostics__harper_repeated_word.snap  snapshot_diagnostics__insights_complex.snap  snapshot_diagnostics__insights_empty.snap  snapshot_diagnostics__insights_simple.snap  snapshot_diagnostics__insights_single_word.snap  snapshot_diagnostics__prose_basic_markdown.snap  snapshot_diagnostics__prose_code_only.snap  snapshot_diagnostics__prose_empty.snap  snapshot_diagnostics__prose_html.snap  snapshot_diagnostics__prose_latex.snap  snapshot_diagnostics__prose_latex_no_document.snap  snapshot_diagnostics__prose_nested_markdown.snap  snapshot_diagnostics__prose_typst_basic.snap  snapshot_diagnostics__prose_typst_code_excluded.snap  snapshot_diagnostics__prose_typst_code_only.snap  snapshot_diagnostics__prose_typst_empty.snap  snapshot_diagnostics__prose_typst_math_excluded.snap  snapshot_diagnostics__prose_typst_mixed_content.snap  snapshot_diagnostics__rule_normalization_fallbacks.snap  snapshot_diagnostics__rule_normalization_harper.snap  snapshot_diagnostics__rule_normalization_languagetool.snap
rust-core/tree-sitter-forester/: grammar.js  out.xml  package.json
rust-core/tree-sitter-forester/src/: grammar.json  node-types.json  parser.c  scanner.c
rust-core/tree-sitter-org/: tree-sitter.json
rust-core/tree-sitter-org/src/: grammar.json  node-types.json  parser.c
rust-core/tree-sitter-tinylang/: grammar.js  package.json
rust-core/tree-sitter-tinylang/src/: grammar.json  node-types.json  parser.c  scanner.c
scripts/: check-file-length.sh  check-l10n-keys.sh  check-tool-versions.sh  generate-third-party.sh
(+101 files in other folders)
