[package]
name = "rust-core"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.13"
tokio = { version = "1", features = ["full", "sync", "fs"] }
ropey = "1.6"
tree-sitter = "0.19.5"
tree-sitter-markdown = "0.7.1"
tree-sitter-html = "0.19.0"
codebook-tree-sitter-latex = "0.6.1"
anyhow = "1.0"
bytes = "1.0"
harper-core = { version = "1.8.0", features = ["concurrent"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
glob = "0.3"
redb = "2.1"
lru = "0.12"
serde_cbor = "0.11"
serde_yaml = "0.9"
whatlang = "0.18"
regex = "1"
extism = "1"

[dev-dependencies]
insta = { version = "1.42", features = ["yaml"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tree-sitter-markdown = "0.7.1"
tree-sitter-html = "0.19.0"
divan = "0.1"

[[bench]]
name = "benchmarks"
harness = false

[build-dependencies]
prost-build = "0.13"
