[package]
name = "lang-check"
version = "0.2.0"
edition = "2024"
description = "Multilingual prose linter with tree-sitter extraction and pluggable checking engines"
license = "MIT"
repository = "https://github.com/KaiErikNiermann/lang-check"
homepage = "https://github.com/KaiErikNiermann/lang-check"
readme = "../README.md"
keywords = ["linter", "prose", "grammar", "tree-sitter", "language-server"]
categories = ["command-line-utilities", "text-processing", "development-tools"]
include = [
    "src/**/*",
    "build.rs",
    "Cargo.toml",
    "Cargo.lock",
    "proto/checker.proto",
    "tree-sitter-*/src/**/*",
    "data/**/*",
    "dictionaries/**/*",
    "benches/**/*",
    "tests/**/*",
]

[dependencies]
prost = "0.14"
tokio = { version = "1", features = ["full", "sync", "fs"] }
ropey = "1.6"
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-md = { version = "0.5", default-features = false }
tree-sitter-html = "0.23"
codebook-tree-sitter-latex = "0.6"
tree-sitter-rst = "0.2"
anyhow = "1.0"
bytes = "1.0"
harper-core = { version = "1.9.0", features = ["concurrent"] }
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
console = "0.16"
indicatif = "0.18"
glob = "0.3"
redb = "3.1"
lru = "0.16"
serde_cbor = "0.11"
serde_yaml = "0.9"
whatlang = "0.18"
regex = "1"
extism = "1"
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
insta = { version = "1.42", features = ["yaml"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
tree-sitter-md = { version = "0.5", default-features = false }
tree-sitter-html = "0.23"
divan = "0.1"

[[bench]]
name = "benchmarks"
harness = false

# Optimize dependencies in debug builds (keeps compile times reasonable
# while making FST deserialization, tree-sitter, and redb usable in debug).
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
prost-build = "0.14"
cc = "1.0"
